[tool.poetry]
name = "discord-notify"
version = "0.1.0"
description = ""
authors = ["torin"]

[tool.poetry.dependencies]
python = "^3.8"
dhooks = "^1.1.3"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
